<resources>

    <string name="app_name">DrawIn</string>
    <string name="menu_settings">Settings</string>

    <string name="new_note">New Drawing</string>
    <string name="pencil">Pencil</string>
    <string name="eraser">Eraser</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="view_notes">Open Drawings</string>
    
    <string name="black">Black</string>
    <string name="purple">Purple</string>
    <string name="cyan">Cyan</string>
    <string name="dark_pink">Dark Pink</string>
    <string name="silver">Silver</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="dark_blue">Dark Blue</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    
</resources>
