<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/toolHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone" >
        
        <HorizontalScrollView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            
            <LinearLayout 
	            android:id="@+id/layoutColors"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
	            <ImageView 
	                android:id="@+id/ivBlack"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/black"
	                android:layout_margin="@dimen/padding_medium"
	                android:background="@drawable/color_black" />
	            
	            <ImageView 
	                android:id="@+id/ivBlue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/black"
	                android:layout_margin="@dimen/padding_medium"
	                android:background="@drawable/color_blue" />
	            
	            <ImageView 
	                android:id="@+id/ivCyan"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/cyan"
	                android:layout_margin="@dimen/padding_medium"
	                android:background="@drawable/color_cyan" />
	            
	            <ImageView 
	                android:id="@+id/ivGreen"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/green"
	                android:layout_margin="@dimen/padding_medium"
	                android:background="@drawable/color_green" />
	            
	            <ImageView 
	                android:id="@+id/ivOrange"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/orange"
	                android:layout_margin="@dimen/padding_medium"
	                android:background="@drawable/color_orange" />
	            
	            <ImageView 
	                android:id="@+id/ivPink"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/dark_pink"
	                android:layout_margin="@dimen/padding_medium"
	                android:background="@drawable/color_pink" />
	            
	            <ImageView 
	                android:id="@+id/ivPurple"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/purple"
	                android:layout_margin="@dimen/padding_medium"
	                android:background="@drawable/color_purple" />
	            
	            <ImageView 
	                android:id="@+id/ivRed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/red"
	                android:layout_margin="@dimen/padding_medium"
	                android:background="@drawable/color_red" />
	            
	            <ImageView 
	                android:id="@+id/ivSilver"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/silver"
	                android:layout_margin="@dimen/padding_medium"
	                android:background="@drawable/color_silver" />
	            
	            <ImageView 
	                android:id="@+id/ivYellow"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/yellow"
	                android:layout_margin="@dimen/padding_medium"
	                android:background="@drawable/color_yellow" />
	            
	        </LinearLayout>
            
        </HorizontalScrollView>
	    
        <SeekBar 
            android:id="@+id/seekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_large"
            android:max="30"/>
        
        <Button 
            android:id="@+id/btnHide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:drawableTop="@android:drawable/arrow_up_float"/>
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sheet"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/toolHolder"
        android:background="@android:color/transparent" >

    </RelativeLayout>
    
    

</RelativeLayout>
